[System.Serializable]
public class JsonArrayWrapper<T> {
    public T[] array;
}
